--- a/deno.jsonc
+++ b/deno.jsonc
@@ -13,8 +13,11 @@
     "$dax": "https://deno.land/x/dax@0.39.2/mod.ts",
     "$event": "https://deno.land/x/event@2.0.1/mod.ts",
     "$jar": "https://deno.land/x/another_cookiejar@v5.0.7/mod.ts",
-    "$std/": "https://deno.land/std@0.224.0/",
+    "@std/assert": "jsr:@std/assert@^1.0.9",
+    "@std/cli": "jsr:@std/cli@^1.0.8",
     "@std/fmt": "jsr:@std/fmt@^1.0.3",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@std/streams": "jsr:@std/streams@^1.0.8",
     "peggy": "npm:peggy@^4.2.0"
   },
   "fmt": {
